--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
-p4env
+.idea
+.DS_Store
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -124,6 +125,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+p4env
 
 # Spyder project settings
 .spyderproject
